<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_main_bg"
    android:orientation="vertical"
    android:padding="6dp" >

    <!-- android:background="#eeeeee" -->

    <LinearLayout
        android:layout_marginTop="60dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

     <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_top_header" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_selector_all_v4"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="25dp"
            android:padding="6dp"
            android:text="@string/option_user_category"
            android:textColor="@color/color_blue"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_bottom"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:padding="6dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/option_logout"
                android:textColor="@color/color_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cur_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:id="@+id/bind"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_bottom"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:padding="6dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/option_bindphone"
                android:textColor="@color/color_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bind_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="25dp"
            android:padding="6dip"
            android:text="@string/option_obout_category"
            android:background="@drawable/layout_selector_all_v8"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_center_v9"
            android:minHeight="50dp"
            android:padding="6dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/option_obout"
                android:textColor="@color/color_black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="25dp"
            android:padding="6dip"
            android:text="@string/option_system_category"
            android:background="@drawable/layout_selector_all_v8"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/check_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_center_v9"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="6dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/option_check_update"
                android:textColor="@color/color_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cur_verson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="当前版本"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>